@@ -1,4 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
+﻿<project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
@@ -114,8 +114,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.13.0</version>
                 <configuration>
-                    <release>17</release>`n                    <compilerArgs>`n                        <arg>--enable-preview</arg>`n                    </compilerArgs>
-                </configuration>
+                    <release>17</release>`n                    </configuration>
             </plugin>
 
             <!-- JUnit -->
@@ -129,4 +128,5 @@
     </build>
 
 </project>
+
 
